linkerd-progressive-delivery/argo-rollouts/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slow-cooker
  namespace: argo-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slow-cooker
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: slow-cooker
    spec:
      containers:
      - name: slow-cooker
        image: buoyantio/slow_cooker:1.3.0
        args:
        - -qps=1
        - -metric-addr=0.0.0.0:9999
        - http://argo-rollouts:80
        ports:
        - containerPort: 9999
