linkerd-progressive-delivery/argo-rollouts/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-rollouts-http-route
  namespace: argo-demo
spec:
  parentRefs:
    - name: argo-rollouts
      namespace: argo-demo
      kind: Service
      group: core
      port: 80
  rules:
    - backendRefs:
        - name: argo-rollouts-stable-service
          namespace: argo-demo
          port: 80
        - name: argo-rollouts-canary-service
          namespace: argo-demo
          port: 80
